# text-table-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
examples/: simple.rs
src/: lib.rs
